@@ -132,6 +132,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #4646: distutils was choking on empty options arg in the setup 
+  function. Original patch by Thomas Heller.
+
 - Issue #4400: .pypirc default generated file was broken in distutils.
 
 - Issue #4736: io.BufferedRWPair's closed property now functions properly.
